<resources>
    <string name="app_name">TaskHero2</string>
    <string name="user">USER</string>
    <string name="add_a_goal">Add a Goal</string>
    <string name="view_unfinished_tasks">View Unfinished Tasks</string>
    <string name="progress_page">Progress Page</string>
    <string name="goal_name">Goal Name</string>
    <string name="about_goal">About Goal</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="submit">Submit</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="add_new_goal">Add New Goal</string>
    <string name="progress_page1">Progress Page</string>
    <string name="_7_10">7/10</string>
    <string name="weekly_tasks_completed">weekly tasks completed</string>
    <string name="streak">Streak</string>
    <string name="add_tasks">add tasks</string>
    <string name="d">+</string>
    <string name="tasks_completed">tasks completed</string>
    <string name="_74">74</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="_5th">5th</string>
    <string name="_4">4</string>
    <string name="leaderboard2">Leaderboard</string>
    <string name="d2">5th</string>
    <string name="streak4">Streak</string>
    <string name="_445">4</string>
    <string name="weekly_tasks_completed3">Weekly Tasks Completed</string>
    <string name="_7_103">7/10</string>
    <string name="progress_page3">Progress Page</string>
    <string name="complete_by">Complete by</string>
    <string name="submit2">Submit</string>
    <string name="name2">Name</string>
    <string name="about_goal3">About Goal</string>
    <string name="new_goal4">New Goal</string>
    <string name="return_to_home">Return to home</string>
    <string name="home">Home</string>
    <string name="home3">Home</string>
    <string name="add_goal">Add goal</string>
    <string name="new_goal">New Goal</string>
    <string name="data_will_appear_here">Data will appear here</string>
    <string name="done">Done!</string>
    <string name="donee">Done!</string>
    <string name="update">Update</string>
    <string name="done2">Done</string>
    <string name="done_button_description">done_button_description</string>

</resources>